--- a/views/imprint.html
+++ b/views/imprint.html
@@ -5,38 +5,10 @@
     <link rel="stylesheet" href="./imprint.css"></link>
     <title>Meredith M. Alongi</title>
   </head>
-  <script>
-	var texts = ["Need to reach me?", "Sie muessen mich erreichen?"];
-	var offs  = 0;
-	var cur   = texts[offs];
-	var pos   = 0;
-	var forw  = true;
-  	setInterval(function() {
-	  var el = document.getElementById("typewrite");
-
-	  if (forw) {
-	    if (pos >= cur.length) {
-	      offs += 1;
-	      cur = texts[offs % texts.length];
-	      forw = false;
-	    } else {
-	      el.innerHTML += cur[pos];
-	      pos += 1;
-	    }
-	  } else {
-	    if (pos == 0) {
-	      forw = true;
-	    } else {
-	      pos -= 1;
-	      el.innerHTML = el.innerHTML.substring(0, pos);
-	    }
-          }
-        }, 100);
-   </script>
   <body>
     <div class="content">
       <div class="txt">
-        <h1 id="typewrite"></h1>
+        <h1 id="typewrite">Want to reach me?</h1>
 	<p class="font-size-normal">Responsible for content:</p>
 	<div class="a-tad-right smaller-fonts let-me-breathe">
 	  <p class="no-p-spacing">Meredith Michael Alongi</p>
@@ -45,7 +17,7 @@
 	  <p class="no-p-spacing">Shoot me an email: meredith at malongi dot com</p>
         </div>
 	<p class="font-size-normal">Responsible for design and engineering:</p>
-	<div class="a-tad-right smaller-fonts">
+	<div class="a-tad-right smaller-fonts let-me-breathe">
 	  <p class="no-p-spacing">Veit Heller</p>
 	  <p class="no-p-spacing">Spreestrasse 26</p>
 	  <p>12439 Berlin</p>
