add gdpr notice

--- a/views/imprint.html
+++ b/views/imprint.html
@@ -23,6 +23,13 @@
 	  <p>12439 Berlin</p>
 	  <p>You talkin' to me: veit at veitheller dot de</p>
 	</div>
+        <h3>GDPR Notice</h3>
+        <p class="font-size-normal let-me-breathe">
+          This website only keeps track of your IP address and user agent; this
+          is necessary for the webserver to work. If you submit a contact form,
+          we also save the details (e-mail, subject, and request) so we can get
+          back to you. No cookies are set.
+        </p>
 	<a class="text-center buttonish-link" href="./">Cool, now send me back!</a>
       </div>
     </div>
